--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next": "13.4.19",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-svg": "^16.1.22",
     "typescript": "5.1.6"
   },
   "devDependencies": {
